BB-8963: Mobile: FrontStore > Checkout > Order Summary grid is misaligned - fixed misaligned content

--- a/src/Oro/Bundle/CheckoutBundle/Resources/public/default/scss/components/checkout-order-summary/checkout-order-summary.scss
+++ b/src/Oro/Bundle/CheckoutBundle/Resources/public/default/scss/components/checkout-order-summary/checkout-order-summary.scss
@@ -145,16 +145,16 @@
 
 @include breakpoint('mobile') {
     .checkout-order-summary {
-        .scrollable-content {
-            max-height: 100%;
-        }
-
         &__grid-head {
             display: none;
         }
 
         &__content {
             padding: 0 15px;
+        }
+
+        &__content .scrollable-content { // Platform styles override
+            max-height: 100%;
         }
 
         &__header {
